--- a/TicTacToe_Windowed/MainWindow.xaml
+++ b/TicTacToe_Windowed/MainWindow.xaml
@@ -6,6 +6,22 @@
         xmlns:local="clr-namespace:TicTacToe_Windowed"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="450">
+
+    <Window.Resources>
+        <Style TargetType="{x:Type Button}" x:Key="btnXclick">
+            <Setter Property="Background" Value="Yellow"/>
+        </Style>
+        <Style TargetType="{x:Type Button}" x:Key="btnOclick">
+            <Setter Property="Background" Value="Orange"/>
+        </Style>
+        <Style TargetType="{x:Type Button}" x:Key="clear">
+            <Setter Property="Background" Value="White"/>
+        </Style>
+        <Style TargetType="{x:Type Button}" x:Key="win">
+            <Setter Property="Background" Value="Green"/>
+        </Style>
+    </Window.Resources>
+    
     <Grid x:Name="board">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width ="1*"/>
